--- a/nofo/css/style.css
+++ b/nofo/css/style.css
@@ -2,13 +2,29 @@
     margin: 0;
     padding: 0;
 }
-:root{
+html.light{
     --color1: #ffffff;
     --color2: #E5E5E5;
     --color3: #1B1BDD;
     --color4: #373748;
     --color5: #aeaeae;
     --color6: #3772FF;
+    --color7: #efefef;
+    --color8: #e7f2ff;
+    --lightico: grayscale(100%);
+    --lighttheme: url('../resources/moon.png');
+}
+html.dark{
+    --color1: #000000;
+    --color2: #1a1a1a;
+    --color3: #1B1BDD;
+    --color4: #c8c8b7;
+    --color5: #515151;
+    --color6: #3772FF;
+    --color7: #101010;
+    --color8: #25292c;
+    --lightico: grayscale(100%) invert();
+    --lighttheme: url('../resources/sun.png');
 }
 *::-webkit-scrollbar{
     width: 5px;
@@ -23,6 +39,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&display=swap');
 body{
     background-color: var(--color2);
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    color: var(--color4);
 }
 .content{
     height: 100vh;
@@ -75,7 +93,7 @@ body{
     position: relative;
 }
 .menu-point img{
-    filter: grayscale(100%);
+    filter: var(--lightico);
     opacity: .3;
 }
 .menu-point:nth-child(2) img{
@@ -238,7 +256,7 @@ input::placeholder{
 .bet{
     width: calc(100% - 30px);
     height: 80px;
-    background: #F6F6FD;
+    background: var(--color7);
     border-radius: 8px;
     display: flex;
     align-items: center;
@@ -443,7 +461,7 @@ input::placeholder{
 .blue-button{
     background-color: var(--color6);
     border-radius: 4px;
-    color: var(--color1);
+    color: #ffffff;
     border: none;
     transition: all .1s ease;
 }
@@ -488,43 +506,50 @@ input::placeholder{
     cursor: pointer;
 }
 .grey-btn:hover{
-    transform: scale(1.05);
-    transform-origin: top;
+    /* transform: scale(1.05); */
+    /* transform-origin: top; */
     border: 1px solid #d7d8df;
 }
-.grey-btn:hover .notification-list{
+.grey-btn:hover .notification-list, .grey-btn:hover .filter-field{
     display: flex;
     z-index: 99;
 }
-.notification-list{
+.notification-list, .filter-field{
     width: 300px;
     height: 400px;
-    border-radius: 4px;
+    border-radius: 4px 0px 4px 4px;
     position: absolute;
     top: 110%;
     right: 0%;
     z-index: 0;
-    background-color: var(--color1);
+    background-color: var(--color7);
     display: none;
     flex-direction: column;
     align-items: center;
     gap: 7px;
     padding-top: 5px;
+    border-right: solid 1px var(--color5);
+    border-bottom: solid 1px var(--color5);
+    border-left: solid 1px var(--color5);
 }
-.notification-list::after{
+.filter-field{
+    height: 150px;
+}
+.notification-list::after, .filter-field::after{
     content: '';
     height: 45px;
     width: 42px;
     position: absolute;
     top: -45px;
-    right: 0;
-    background-color: var(--color1);
+    right: -1px;
+    background-color: var(--color7);
     border-radius: 50% 50% 0 0;
+    border-right: solid 1px var(--color5);
 }
-.notification-list::before{
+.notification-list::before, .filter-field::before{
     content: '';
     border-radius: 0 0 7px 0;
-    box-shadow: 7px 0 0 0 var(--color1);
+    box-shadow: 7px 0 0 0 var(--color7);
     position: absolute;
     top: -15px;
     right: 42px;
@@ -532,13 +557,17 @@ input::placeholder{
     width: 15px;
 }
 .notify{
-    min-height: 40px;
+    min-height: 50px;
+    line-height: 50px;
     width: min(calc(100% - 10px) - 20px, 100%);
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.15);
+    border: solid 1px var(--color2);
     border-radius: 4px;
-    line-height: 40px;
     padding-left: 10px;
     margin-top: 5px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    background-color: var(--color8);
 }
 .point{
     position: absolute;
@@ -569,7 +598,7 @@ input::placeholder{
 .person{
     height: 80px;
     width: 290px;
-    background: #FBFBFE;
+    background: var(--color7);
     box-shadow: 10px 6px 25px rgba(0, 0, 0, 0.04);
     border-radius: 4px;
     display: flex;
@@ -588,7 +617,7 @@ input::placeholder{
 .grey-btn-cubic{
     height: 33px;
     width: 33px;
-    background: #F4F5FB;
+    background: var(--color2);
     border-radius: 2px;
     display: flex;
     justify-content: center;
@@ -613,7 +642,7 @@ input::placeholder{
     justify-content: space-evenly;
     align-items: center;
 
-    background: #FFFFFF;
+    background: var(--color1);
     box-shadow: 6px 6px 25px rgba(0, 0, 0, 0.03);
     border-radius: 8px;
 }
@@ -737,4 +766,71 @@ input::placeholder{
 }
 .hiden{
     display: none;
+}
+.settings-block{
+    height: 100%;
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+.setings-menu-point{
+    width: calc(100% - 40px);
+    height: 70px;
+    border-radius: 5px;
+    background-color: var(--color1);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.icon-theme{
+    height: 35px;
+    width: 35px;
+    background: var(--lighttheme);
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    z-index: 99;
+    cursor: pointer;
+}
+#theme{
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 100;
+    cursor: pointer;
+}
+.pricefromto{
+    height: 100%;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+.pricefromto input{
+    height: 25px;
+    width: 35px;
+    text-align: center;
+    border: solid 1px var(--color4);
+    border-radius: 5px;
+    outline: none;
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    background-color: var(--color7);
+    color: var(--color4);
+}
+.pricefromto span{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: calc(100% - 20px);
+    background-color: var(--color8);
+    padding: 10px;
 }
