--- a/nofo/css/style.css
+++ b/nofo/css/style.css
@@ -786,6 +786,72 @@ input::placeholder{
     padding-left: 20px;
     padding-right: 20px;
 }
+.settings-menu-block{
+    width: 100%;
+    height: 45vmin;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.settings-card{
+    height: calc(100% - 40px);
+    width: 32%;
+    background-color: var(--color1);
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.batary{
+    width: 40%;
+    height: 25vmin;
+    border: solid 3px var(--color4);
+    background-color: var(--color5);
+    border-radius: 10px;
+    position: relative;
+}
+.batary::before{
+    content: '';
+    position: absolute;
+    border: solid 3px var(--color4);
+    background-color: var(--color4);
+    top: -13px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    height: 7px;
+    width: 30%;
+    border-radius: 4px;
+}
+.batary-level{
+    width: 100%;
+    border-radius: 10px;
+    background-color: #00cc77;
+    position: relative;
+}
+.charge{
+    height: 70px;
+    width: 70px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+}
+.persent{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+}
+h2{
+    color: var(--color4);
+}
 .icon-theme{
     height: 35px;
     width: 35px;
@@ -834,3 +900,94 @@ input::placeholder{
     background-color: var(--color8);
     padding: 10px;
 }
+.dialog{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all .3s ease-in-out;
+    animation: appear .13s linear;
+}
+.window{
+    width: 500px;
+    height: 300px;
+    background-color: var(--color1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    position: relative;
+    z-index: 200;
+}
+.yes-no{
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+}
+.back-blur{
+    position: absolute;
+    z-index: 199;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(204, 204, 204, 0.4);
+    backdrop-filter: blur(5px);
+}
+@keyframes appear {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 100%;
+    }
+}
+.form-block{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 50vh;
+    width: 50vmin;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: var(--color1);
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    animation: appear .5s linear;
+}
+.login-form{
+    height: auto;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 25px;
+}
+input[type="text"]{
+    height: 30px;
+    width: 50%;
+    outline: none;
+    border: none;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    text-align: center;
+    transition: all .2s ease-in-out;
+}
+input[type="text"]:focus{
+    width: 65%;
+}
+
+
+
+
