--- a/nofo/css/style.css
+++ b/nofo/css/style.css
@@ -172,6 +172,8 @@ body {
     display: flex;
     height: 100%;
     flex-direction: column;
+    justify-content: center;
+    /* align-items: center; */
     gap: 10px;
 }
 
@@ -1209,4 +1211,127 @@ label:before,
 label:after {
     content: '';
     position: absolute;
+}
+.change-ava{
+    width: 100%;
+    /* padding-left: 50px; */
+    height: 300px;
+    background-color: var(--color1);
+    border-radius: 10px;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 50px;
+}
+.field-color{
+    width: calc(100% - 10px);
+    height: 40px;
+    background: #F4F5FB;
+    border-radius: 12px;
+    text-align: left;
+    padding-left: 10px;
+}
+.newava{
+    height: 100%;
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    justify-content: center;
+    position: relative;
+}
+.newava #ch_ava1{
+    min-height: 150px;
+    min-width: 150px;
+    max-height: 150px;
+    max-width: 150px;
+    border-radius: 50%;
+    background-color: #000000;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    transition: all .2s ease-in-out;
+    background: none;
+    z-index: 10;
+}
+#ch_ava{
+    min-height: 150px;
+    min-width: 150px;
+    max-height: 150px;
+    max-width: 150px;
+    border-radius: 50%;
+}
+#ch_ava1:hover{
+    filter: brightness(.7);
+}
+#ch_ava1:hover .edit{
+    opacity: 1;
+}
+.acc{
+    gap: 20px;
+    width: calc(50% - 50px);
+    margin-left: 50px;
+}
+.change-password{
+    width: 100%;
+    height: 300px;
+    display: flex;
+    gap: 20px;
+}
+.pass{
+    width: 32%;
+    justify-content: center;
+}
+.logg{
+    width: calc(100% - 40px);
+    padding-left: 20px;
+}
+.string{
+    display: flex;
+    flex-direction: row;
+    height: 40px;
+    width: calc(100% - 20px);
+    align-items: center;
+    gap: 20px;
+}
+.field-color-area{
+    min-width: calc(50% - 10px);
+    min-height: calc(50% - 10px);
+    max-width: calc(100% - 10px);
+    max-height: calc(200px - 10px);
+    background: #F4F5FB;
+    border-radius: 12px;
+    text-align: left;
+    padding: 10px;
+}
+.edit{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 60px;
+    max-height: 60px;
+    opacity: 0;
+    transition: all .2s ease-in-out;
+}
+.view-btn{
+    min-height: 40px;
+    min-width: 40px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    background: url(../resources/view.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 60%;
+    background-color: #f4f5fb;
+    border: none;
+    outline: none;
+    transition: all .2s ease-in-out;
+}
+.view-btn:hover{
+    filter: brightness(.9);
+}
+.img_link_field{
+    width: 80%;
 }
